--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-safe-area-context": "^4.5.0"
   },
   "private": true
 }
