--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
     "react-native-screens": "~4.16.0",
     "react-native-safe-area-context": "^4.5.0"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
+  }
 }
