--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "@react-navigation/bottom-tabs": "^7.8.8",
     "@react-navigation/native": "^7.1.22",
     "expo": "~54.0.25",
+    "expo-blur": "~15.0.7",
+    "expo-linear-gradient": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-pager-view": "6.9.1",
+    "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~4.16.0",
-    "react-native-safe-area-context": "^4.5.0"
+    "react-native-web": "^0.21.0"
   },
   "private": true,
   "devDependencies": {
